[FTR] Add PR template and update swagger
